[BUGFIX]: update Jenkinsfile Dockerfile and ci.yml
Change-Id: I42c6fe0ed15f718d78192e16873176310ee7eb55
Signed-off-by: Hadassa Naki <hadassa.naki@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,4 +39,4 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/snake-game:latest
+        tags: hadasanaki/snake-game:latest
